--- a/E-Bones/E-Bones.csproj
+++ b/E-Bones/E-Bones.csproj
@@ -29,6 +29,7 @@
 
   <ItemGroup>
     <Folder Include="Infrastructure\Messaging\" />
+    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
